[package]
name = "pty-process"
version = "0.4.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

description = "spawn commands attached to a pty"
repository = "https://git.tozt.net/pty-process"
readme = "README.md"
keywords = ["pty", "spawn", "execute", "process"]
categories = ["asynchronous", "command-line-interface"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
rustix = { version = "0.38.7", features = ["pty", "process", "fs", "termios"] }

tokio = { version = "1.29.1", features = ["fs", "process", "net"], optional = true }

[dev-dependencies]
futures = "0.3.28"
nix = { version = "0.26.2", default-features = false, features = ["signal", "fs", "term", "poll"] }
regex = "1.9.3"
tokio = { version = "1.29.1", features = ["full"] }

[features]
default = []

async = ["tokio"]
